src/tests/snapshots/synoik__tests__window_opening__check_target_output_and_workspace@ws1-out1-fsF-wfsB1-spB1.snap
---
source: src/tests/window_opening.rs
description: "open on workspace: ws-1\nopen on output: headless-1\nopen fullscreen: false\nwant fullscreen: B1\nset parent: B1"
expression: snapshot
---
final monitor: headless-1
final workspace: 0 (ws-1)

initial configure:
size: 0 × 0, bounds: 1280 × 720, states: []

post-map configures:
size: 1 × 1, bounds: 1280 × 720, states: [Activated]
